--- a/inviteAll/app/views/main.scala.html
+++ b/inviteAll/app/views/main.scala.html
@@ -6,12 +6,17 @@
     <head>
         <title>Geburtstagseinladung 2.0 - @title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <link rel="shortcut icon" href="@routes.Assets.at("images/favicon.png")" type="image/x-icon">
+        <link rel="icon" href="@routes.Assets.at("images/favicon.png")" type="image/x-icon">
         <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/inviteAll.js")" type="text/javascript"></script>
     </head>
     <body>
-        @content
+        <div id="floater">
+        </div>
+            <div id="content">
+                @content
+            </div>
     </body>
 </html>
