--- a/inviteAll/public/stylesheets/main.css
+++ b/inviteAll/public/stylesheets/main.css
@@ -2,6 +2,7 @@ html, body  {height:100%; margin:0; padding:0;}
 
 body {
 	font-family: 'Press Start 2P', cursive;
+	line-height: 1.25;
 }
 
 #floater {
@@ -15,7 +16,7 @@ body {
 	position: relative;
 	margin: auto;
     width: 800px;
-    height: 700px;
+    height: 730px;
     border: 10px solid #000;
     padding: 20px;
 }
