ADDED: Questions for guests.

--- a/inviteAll/app/views/decision_yes.scala.html
+++ b/inviteAll/app/views/decision_yes.scala.html
@@ -11,7 +11,7 @@
     
 	<div id="nav">
 		<a href="@routes.Application.decision()"><button id="back" type="button">@Messages("decision.back")</button></a> 
-		<a href="@routes.Application.summary()"><button id="continue" type="button">@Messages("decision.yes.continue")</button></a>
+		<a href="@routes.Application.questions()"><button id="continue" type="button">@Messages("decision.yes.continue")</button></a>
 		<div style="clear: both"></div>
 	</div>
 }
