--- a/inviteAll/app/views/summary.scala.html
+++ b/inviteAll/app/views/summary.scala.html
@@ -40,7 +40,7 @@
     </ul>
     
 	<div id="nav">
-		<a href="@routes.Application.decision()"><button id="back" type="button">@Messages("summary.back")</button></a> 
+		<a href="@routes.Application.questions2()"><button id="back" type="button">@Messages("summary.back")</button></a> 
 		<a href="@routes.Application.logout()"><button id="continue" type="button">@Messages("summary.logout")</button></a>
 		<div style="clear: both"></div>
 	</div>
