--- a/inviteAll/public/stylesheets/main.css
+++ b/inviteAll/public/stylesheets/main.css
@@ -5,6 +5,10 @@ body {
 	line-height: 1.25;
 }
 
+h2 {
+	font-size: 1.1em;
+}
+
 #floater {
 	float: left;
 	height: 50%;
@@ -93,6 +97,10 @@ a {
 
 #decisions, #decisions_feedback {
 	float: left;
+}
+
+.form_error {
+	color: #cc0000;
 }
 
 .reminder_list {
