CHANGED: Summary - Using different MS Live Calendar Logo.

--- a/inviteAll/app/views/summary.scala.html
+++ b/inviteAll/app/views/summary.scala.html
@@ -22,7 +22,7 @@
     <li>
     <span>Microsoft Live:</span> 
     <a href="http://calendar.live.com/calendar/calendar.aspx?rru=addevent&dtstart=20130810T180000Z&dtend=20130811T030000Z&summary=30.%20Geburtstag%20Christian%20Oeing&location=Gr%C3%BCner%20J%C3%A4ger%2C%20Neuer%20Pferdemarkt%2036%2C%2020357%20Hamburg&description=Feier%20anl%C3%A4sslich%20des%2030.%20Geburtstags%20von%20Christian%20Oeing%20mit%20Tausenden%20von%20tollen%20G%C3%A4sten!" target="_blank">
-        <img src='@routes.Assets.at("images/add_to_windows.png")' />
+        <img src='@routes.Assets.at("images/windows_live_calendar_logo.png")' />
     </a>
     </li>
     <li>
