--- a/inviteAll/public/stylesheets/main.css
+++ b/inviteAll/public/stylesheets/main.css
@@ -78,7 +78,8 @@ a {
     height: 100px;
     font-size: 60px;
     width: 80%;
-    margin-top: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 #code_error {
